--- a/templet/baoding/park_zy.html
+++ b/templet/baoding/park_zy.html
@@ -16,7 +16,8 @@
                     </div>
                     <h3>{$vo.title}</h3>
                     {$vo.content}
-                    <p class="gengduo"><a href="{$vo.tpl}">READ MORE</a>
+                    <p class="gengduo">
+                        <a href="{$vo.tpl}">READ MORE</a>
                     </p>
                     <div class="clear"></div>
                 </div>
