--- a/templet/fenyuan/jqsh_jcsh_zd.html
+++ b/templet/fenyuan/jqsh_jcsh_zd.html
@@ -19,7 +19,7 @@
         	<div class="gywmnr">
             	<h3>{$page_show.title}</h3>
                 <div class="textnr">
-                    <p class="left"><span>时间：{$page_show.title|date_format:'%Y-%m-%d'}</span>   <span> 来源：{$page_show.from}</span></p>
+                    <p class="left"><span>时间：{$page_show.create_time|date_format:'%Y-%m-%d'}</span>   <span> 来源：{$page_show.from}</span></p>
                    {include_php './templet/fenyuan/public/share.php'}
 				</div>
                 <!-- 代码 开始 -->
