--- a/templet/fenyuan/mzsp_sp.html
+++ b/templet/fenyuan/mzsp_sp.html
@@ -69,10 +69,10 @@
                 <div class="tab_content">
                    <div class="hui">
                    		<div class="txtx_top">
-                            <p class="shangz"><a href=""> &lt;&lt; 上一周  </a> </p>
+                            <p class="shangz"><a href="{spUrl c=mzsp_sp week=$upweek tid=$cTerm.id}"> &lt;&lt; 上一周  </a> </p>
                             <p class="xiaox"><img src="{$skin_path}images/xiaox.png" /></p>
-                            <p class="riqi">01/05 - 01/09</p>
-                            <p class="xiaz"><a href=""> 下一周 &gt;&gt; </a></p>
+                            <p class="riqi">{$begin_time} - {$end_time}</p>
+                            <p class="xiaz"><a href="{spUrl c=mzsp_sp week=$nextweek tid=$cTerm.id}"> 下一周 &gt;&gt; </a></p>
                             <div class="clear"></div>
                         </div>
                         <div class="ysb">
@@ -92,33 +92,18 @@
                                 <li><img src="{$skin_path}images/zhongdian.png" /></li>
                                 <li><img src="{$skin_path}images/wanchan.png" /></li>
                             </ul>
-                            <ul class="left ysb_right">
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span><span>什锦疙瘩汤</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                                <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><span>小糖包</span><span>什锦疙瘩汤</span><span>茶叶蛋</span></li>
-                            </ul>
+                        <ul class="left ysb_right">
+                            {foreach $week_data as $vo}
+                                {foreach $vo as $v}
+                                    <li title="{$v}">
+                                        <span>{$v|vstr_replace:"\n":"<br />"}</span>
+                                    </li>
+                                {/foreach}
+                            {/foreach}  
+                             {if (!$week_data)}
+                            <img src="{$skin_path}images/shipu-1.jpg" />
+                            {/if}        
+                        </ul>
                             <div class="clear"></div>
                         </div>
                    </div>
@@ -128,9 +113,7 @@
                           <tr>
                             <td class="w365">
                             	<ul>
-                                	<li>小糖包</li>
-                                    <li>什锦疙瘩汤</li>
-                                    <li>茶叶蛋</li>
+                                	<li>{$day_food.zao}</li>
                                 </ul>
                             </td>
                             <td class="430"><p><img src="{$skin_path}images/06.png" /></p></td>
@@ -144,7 +127,7 @@
                             </td>
                             <td class="430">
                             	<ul>
-                                	<li>达利园软面包</li>
+                                	<li>{$day_food.zaodian}</li>
                                 </ul>
                             </td>
                           </tr>
@@ -154,10 +137,7 @@
                           <tr>
                             <td class="w365">
                             	<ul>
-                                	<li>奶香馒头 </li>
-                                    <li>牛肉炖土豆烩菜 </li>
-                                    <li>黄瓜炒鸡蛋</li>
-                                    <li>冰糖紫米粥</li>
+                                	<li>{$day_food.wu}</li>
                                 </ul>
                             </td>
                             <td class="430"><p><img src="{$skin_path}images/16.png" /></p></td>
@@ -171,7 +151,7 @@
                             </td>
                             <td class="430">
                             	<ul>
-                                	<li>苹果</li>
+                                	<li>{$day_food.wudian}</li>
                                 </ul>
                             </td>
                           </tr>
@@ -181,9 +161,7 @@
                           <tr>
                             <td class="w365">
                             	<ul>
-                                	<li>小糖包</li>
-                                    <li>什锦疙瘩汤</li>
-                                    <li>茶叶蛋</li>
+                                	<li>{$day_food.wan}</li>
                                 </ul>
                             </td>
                             <td class="430"><p><img src="{$skin_path}images/30.png" /></p></td>
