--- a/templet/baoding/public/layout_zd.html
+++ b/templet/baoding/public/layout_zd.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>剑桥资讯</title>
+    <title>剑桥幼儿园</title>
     <link type="text/css" href="{$skin_path}css/baes.css" rel="stylesheet" />
     <link type="text/css" href="{$skin_path}css/zy.css" rel="stylesheet" />
     <script language="javascript" src="{$skin_path}js/jquery-1.11.1.min.js"></script>
