--- a/templet/baoding/search.html
+++ b/templet/baoding/search.html
@@ -14,7 +14,13 @@
                         {foreach $results as $key => $vo}
                             <li>
                                 <span>{$vo.create_time|date_format:'%Y-%m-%d'}</span>
-                                <a href="{spUrl c=$vo.tpl id=$vo.id}">{$vo.title|msubstr:"0":'10'}</a>
+                                {if !stristr($vo.tpl,"http")}
+                                    <a href="{spUrl c=$vo.tpl id=$vo.id}">
+                                {else}
+                                    <a href="{$vo.tpl}">
+                                {/if}
+                                    {$vo.title|msubstr:"0":'10'}
+                                </a>
                             </li>
                         {/foreach}
                     </ul>
@@ -25,7 +31,7 @@
                                 <!--在当前页不是第一页的时候，显示前页和上一页-->
                                 {if $pager.current_page != $pager.first_page}
                                     <li class="syy">
-                                        <a href="{spUrl c=search tid=$tid a=index page=$pager.prev_page}"> &lt; </a>
+                                        <a href="{spUrl c=search keyword=$smarty.get.keyword a=index page=$pager.prev_page}"> &lt; </a>
                                     </li>
                                 {/if}
                                 <!--开始循环页码，同时如果循环到当前页则不显示链接-->
@@ -33,7 +39,7 @@
                                     {if $thepage eq $pager.current_page -1 or $thepage eq $pager.current_page or $thepage eq $pager.current_page + 1}
                                         {if $thepage != $pager.current_page}
                                             <li class="sz">
-                                                <a href="{spUrl c=search tid=$tid a=index page=$thepage}">{$thepage}</a>
+                                                <a href="{spUrl c=search keyword=$smarty.get.keyword a=index page=$thepage}">{$thepage}</a>
                                             </li>
                                         {else}
                                             <li class="sz hover">
@@ -45,7 +51,7 @@
                                 <!--在当前页不是最后一页的时候，显示下一页和后页-->
                                 {if $pager.current_page != $pager.last_page}
                                     <li class="syy">
-                                        <a href="{spUrl c=search tid=$tid a=index page=$pager.next_page}"> &gt; </a>
+                                        <a href="{spUrl c=search keyword=$smarty.get.keyword a=index page=$pager.next_page}"> &gt; </a>
                                     </li>
                                 {/if}
                             {/if}                        
