--- a/templet/phone/notices.html
+++ b/templet/phone/notices.html
@@ -18,7 +18,7 @@
         	<div id="page-con">
 	        	<ul class="notice-page">
 	        		{foreach $articles as $vo}
-	        		<li class="clearFloat"><a href="{spUrl c=$vo['ptpl'] id=$vo['id']}" data-ajax='false'>{$vo.title|msubstr:'0':'10'}<span>{$vo.create_time|date_format:'%Y-%m-%d'}</span></a></li>
+	        		<li class="clearFloat"><a href="{spUrl c=$vo.ptpl id=$vo.id}" data-ajax='false'>{$vo.title|msubstr:'0':'10'}<span>{$vo.create_time|date_format:'%Y-%m-%d'}</span></a></li>
 	        		{/foreach}
 	        	</ul>
         	</div>
