--- a/templet/fenyuan/bjztc.html
+++ b/templet/fenyuan/bjztc.html
@@ -22,7 +22,7 @@
                     <ul>
                         <li>班级口号：{$vo.content|msubstr:'0':'15'}</li>
                     </ul>
-                    <p class="right"><a href="">READ MORE</a></p>
+                    <p class="right"><a href="{$vo.tpl}">READ MORE</a></p>
                     <div class="clear"></div>
                 </div>
                 {/foreach}
