--- a/templet/fenyuan/jqsh_ktnr_zd.html
+++ b/templet/fenyuan/jqsh_ktnr_zd.html
@@ -13,8 +13,8 @@
         <div class="right gy_right">
         	<h2>{$page_show.title}</h2>
             <div class="ktnr_nr">
-            	<img src="{$skin_path}images/qqqq.png" />
-             
+            	<!-- <img src="{$skin_path}images/qqqq.png" /> -->
+                {$page_show.content}
             </div>
         </div>
         <div class="clear"></div>
