--- a/templet/fenyuan/yybm_wyyy.html
+++ b/templet/fenyuan/yybm_wyyy.html
@@ -67,7 +67,7 @@
                         </tr>
                     </table>
                     <p>
-                        <input name="" type="button" value="提 交" />
+                        <input name="" type="submit" value="提 交" />
                     </p>
                 </form>
             </div>
