--- a/templet/phone/garden.html
+++ b/templet/phone/garden.html
@@ -20,7 +20,7 @@
 	        		{foreach $list as $vo}
 	        			<li class="clearFloat">
 		        			<div class="right-arrow">
-			        			<a href="{spUrl c=$vo.ptpl tid=$vo.id}" ajax-data="false">
+			        			<a href="{spUrl c=$vo.ptpl tid=$vo.id}" data-ajax="false">
 			        				<span class="imag">
 			        					<img width="73px;" height="69px;" src="{$vo.cover|upload_echo}" alt="" />
 			        				</span>
