--- a/tplv2/theme/banji/aside.html
+++ b/tplv2/theme/banji/aside.html
@@ -51,7 +51,7 @@
 		{break}
 		{/if}
 	    <li>
-		    <a href="{goUserHome domain=$da.tome.domain uid=$da.touid}" title="{$da.tome.username}" target="_blank">
+		    <a href="{$da.b_url}" title="{$da.tome.username}" target="_blank">
 			<img src="{$da.attr.img.0.url}" alt="{$da.tome.username}" />
 			</a>
 		</li>
@@ -70,7 +70,7 @@
 		{break}
 		{/if}
 	    <li>
-		    <a href="{goUserHome domain=$da.tome.domain uid=$da.touid}" title="{$da.tome.username}" target="_blank">
+		    <a href="{$da.b_url}" title="{$da.tome.username}" target="_blank">
 				<img src="{$da.attr.img.0.url}" alt="{$da.tome.username}" />
 			</a>
 		</li>
