--- a/tplv2/theme/boy/index.html
+++ b/tplv2/theme/boy/index.html
@@ -8,8 +8,8 @@
 		<div id="mytag">
 			<ul>
 				<li><a href="">首页</a></li>
-				<li><a href="">家园联系册</a></li>
-				<li><a href="">相册</a></li>
+				<!-- <li><a href="">家园联系册</a></li> -->
+				<li><a href="{goUserHomeC domain=$domain uid=$touid a=type type=3}">相册</a></li>
 			</ul>
 			<div class="clear"></div>
 		</div>
