--- a/templet/baoding/park_zy.html
+++ b/templet/baoding/park_zy.html
@@ -14,8 +14,10 @@
                     <div class="tp_top">
                         <img src="{$vo.cover|upload_echo}" />
                     </div>
-                    <h3>{$vo.title}</h3>
-                    {$vo.content}
+                    <div style="height: 125px;">
+                        <h3>{$vo.title}</h3>
+                        {$vo.content}
+                    </div>
                     <p class="gengduo">
                         <a href="{$vo.tpl}">READ MORE</a>
                     </p>
