--- a/templet/fenyuan/index.html
+++ b/templet/fenyuan/index.html
@@ -152,22 +152,24 @@ $(function() {
                 </div>
                 <div class="tab_content">
                     <div class="hui">
-                        {foreach $f_hd as $vo}
-                            <div class="hz">
-                                <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" /></a>
-                                <p>{$vo.title}</p>
-                            </div>
-                            {if $vo@index eq 3} {break} {/if} 
-                        {/foreach} 
-                        {foreach $f_kt as $vo}
-                            <div class="hz">
-                                <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" />
-                                </a>
-                                <p>{$vo.title}</p>
-                            </div>
-                            {if $vo@index eq 3} {break} {/if} 
-                        {/foreach}
-                        <div class="clear"></div>
+                        <div style="height: 500px;">
+                            {foreach $f_hd as $vo}
+                                <div class="hz">
+                                    <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" /></a>
+                                    <p>{$vo.title}</p>
+                                </div>
+                                {if $vo@index eq 3} {break} {/if} 
+                            {/foreach} 
+                            {foreach $f_kt as $vo}
+                                <div class="hz">
+                                    <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" />
+                                    </a>
+                                    <p>{$vo.title}</p>
+                                </div>
+                                {if $vo@index eq 3} {break} {/if} 
+                            {/foreach}
+                            <div class="clear"></div>
+                        </div>
                         <div class="gengduo">
                             <a href="{spUrl c=$f_sh.tpl tid=$f_sh.id}"><img src="{$skin_path}images/gengduo.png" />
                             </a>
@@ -175,14 +177,16 @@ $(function() {
                     </div>
 
                     <div class="none hui">
-                        {foreach $f_hd as $vo}
-                        <div class="hz">
-                            <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" />
-                            </a>
-                            <p>{$vo.title}</p>
+                        <div style="height: 500px;">
+                            {foreach $f_hd as $vo}
+                            <div class="hz">
+                                <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" />
+                                </a>
+                                <p>{$vo.title}</p>
+                            </div>
+                            {/foreach}
+                            <div class="clear"></div>
                         </div>
-                        {/foreach}
-                        <div class="clear"></div>
                         <div class="gengduo">
                             <a href="{spUrl c=$f_hd_term.tpl tid=$f_hd_term.id}"><img src="{$skin_path}images/gengduo.png" />
                             </a>
@@ -191,14 +195,16 @@ $(function() {
 
 
                     <div class="none hui">
-                        {foreach $f_kt as $vo}
-                        <div class="hz">
-                            <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" />
-                            </a>
-                            <p>{$vo.title}</p>
+                        <div style="height: 500px;">
+                            {foreach $f_kt as $vo}
+                            <div class="hz">
+                                <a href="{spUrl c=$vo.tpl id=$vo.id}"><img src="{$vo.cover|upload_echo}" />
+                                </a>
+                                <p>{$vo.title}</p>
+                            </div>
+                            {/foreach}
+                            <div class="clear"></div>
                         </div>
-                        {/foreach}
-                        <div class="clear"></div>
                         <div class="gengduo">
                             <a href="{spUrl c=$f_kt_term.tpl tid=$f_kt_term.id}"><img src="{$skin_path}images/gengduo.png" />
                             </a>
