--- a/templet/fenyuan/bjztc.html
+++ b/templet/fenyuan/bjztc.html
@@ -20,7 +20,7 @@
                     </div>
                     <h4>{$vo.title|msubstr:'0':'10'}</h4>
                     <ul>
-                        <li>班级口号：{$vo.content|msubstr:'0':'15'}</li>
+                        <li>班级口号：{$vo.brief|msubstr:'0':'15'}</li>
                     </ul>
                     <p class="right"><a href="{$vo.tpl}">READ MORE</a></p>
                     <div class="clear"></div>
