--- a/templet/fenyuan/jqsh_ktnr.html
+++ b/templet/fenyuan/jqsh_ktnr.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="left wz">
                 	<h3>{$vo.title}</h3>
-                    <p>{$vo.content|msubstr:'0':'90'}</p>
+                    <p>{$vo.brief|msubstr:'0':'90'}</p>
                     <p><a href="{spUrl c=$vo['tpl'] id=$vo['id']}">了解详情</a></p>
                     <div class="clear"></div>
                 </div>
