--- a/templet/phone_fen/index.html
+++ b/templet/phone_fen/index.html
@@ -83,7 +83,7 @@
                 <div class="center-div">
                     <h1>预约报名</h1>
                     <div class="case-bot">
-                        <p>{$baoming.content|msubstr:'0':'100'}</p>
+                        <p>{$baoming.brief|msubstr:'0':'100'}</p>
                         <p>本园常年对外招生。</p>
                     </div>
                     <a class="phone-mm" href="tel:123456789">报名电话</a>
