--- a/templet/fenyuan/gywm_zxxx.html
+++ b/templet/fenyuan/gywm_zxxx.html
@@ -4,49 +4,50 @@
 {/block}
 {block name=content}
 <script language="javascript">
-  $(function(){
-    var index = 0;  
-    $(".tab_title ul li").click(function(){
-      index = $(".tab_title ul li").index(this);
-      $(this).addClass("selected").siblings().removeClass("selected");
-      $(".tab_content .hui").eq(index).show().siblings().hide();
+$(function() {
+    var index = 0;
+    $(".tab_title ul li").click(function() {
+        index = $(".tab_title ul li").index(this);
+        $(this).addClass("selected").siblings().removeClass("selected");
+        $(".tab_content .hui").eq(index).show().siblings().hide();
     });
-    var i = 4;  //定义每个面板显示8个菜单
-    var len = $(".u .scrol li").length;  //获得LI元素的个数
+    var i = 4; //定义每个面板显示8个菜单
+    var len = $(".u .scrol li").length; //获得LI元素的个数
     var page = 1;
-    var maxpage = Math.ceil(len/i);
+    var maxpage = Math.ceil(len / i);
     var scrollWidth = $(".u").width();
-    $(".vright").click(function(e){
-      if(!$(".u .scrol").is(":animated")){
-      if(page == maxpage ){
-        $(".u .scrol").stop();
-        $("#div1").css({
-          "top": (e.pageY + 20) +"px",
-          "left": (e.pageX + 20) +"px",
-          "opacity": "0.9"
-        }).stop(true,false).fadeIn(800).fadeOut(800);
-      }else{
-        $(".u .scrol").animate({
-          left : "-=" + scrollWidth +"px"
-        },2000);
-        page++;
-      }
-      }
+    $(".vright").click(function(e) {
+        if (!$(".u .scrol").is(":animated")) {
+            if (page == maxpage) {
+                $(".u .scrol").stop();
+                $("#div1").css({
+                    "top": (e.pageY + 20) + "px",
+                    "left": (e.pageX + 20) + "px",
+                    "opacity": "0.9"
+                }).stop(true, false).fadeIn(800).fadeOut(800);
+            } else {
+                $(".u .scrol").animate({
+                    left: "-=" + scrollWidth + "px"
+                }, 2000);
+                page++;
+            }
+        }
     });
-    $(".vleft").click(function(){
-    if(!$(".u .scrol").is(":animated")){
-      if(page == 1){
-      $(".u .scrol").stop();
-      }else{
-      $(".u .scrol").animate({
-        left : "+=" + scrollWidth +"px"
-      },2000);
-      page--;
-      }
-      }
+    $(".vleft").click(function() {
+        if (!$(".u .scrol").is(":animated")) {
+            if (page == 1) {
+                $(".u .scrol").stop();
+            } else {
+                $(".u .scrol").animate({
+                    left: "+=" + scrollWidth + "px"
+                }, 2000);
+                page--;
+            }
+        }
     });
-  });
+});
 </script>
+
 <div id="content">
 	{include_php './templet/fenyuan/public/tptop.php'}
 	<div class="main gywm">
@@ -75,7 +76,7 @@
                         	<ul>
                             	<li><span>{$vo.create_time|date_format:'%Y-%m-%d'}</span><a href="{spUrl c=$vo.tpl  a=index id=$vo.id}">{$vo.title|msubstr:'0':'10'}</a></li>
                             </ul>
-                            <p>{$vo.title|msubstr:'0':'100'}</p>
+                            <p>{$vo.brief|msubstr:'0':'100'}</p>
                         </div>
                    </div>
                    {/foreach}
