--- a/templet/fenyuan/index.html
+++ b/templet/fenyuan/index.html
@@ -100,7 +100,7 @@ $(function() {
                         {foreach $f_news as $vo} 
                             {if $vo@index eq 0}
                             <h3 class="qdbj"><a href="{spUrl c=$vo.tpl id=$vo.id}">{$vo.title}</a></h3>
-                            <p>{$vo.content|msubstr:'0':'70'}</p>
+                            <p>{$vo.brief|msubstr:'0':'70'}</p>
                             {else}
                             <h3><a href="{spUrl c=$vo.tpl id=$vo.id}">{$vo.title}</a></h3> 
                             {/if}
@@ -118,7 +118,7 @@ $(function() {
                     <div class="tupian">
                         <img src="{$f_jieshao.cover|upload_echo}" />
                     </div>
-                    <p>{$f_jieshao.content|msubstr:'0':'80'}</p>
+                    <p>{$f_jieshao.brief|msubstr:'0':'80'}</p>
                     <div class="genduo">
                         <a href="{spUrl c=$f_jh.tpl tid=$f_jh.id}"></a>
                     </div>
@@ -129,7 +129,7 @@ $(function() {
                     <h2>{$f_ju.name}<span>{$f_ju.en_name}</span></h2> 
                     {foreach $f_jiyu as $vo}
                         <h3><a href="{spUrl c=$vo.tpl id=$vo.id}">{$vo.title}</a></h3>
-                        <p>{$vo.content|msubstr:'0':'80'}</p>
+                        <p>{$vo.brief|msubstr:'0':'80'}</p>
                     {/foreach}
                     <div class="genduo">
                         <a href="{spUrl c=$f_ju.tpl tid=$f_ju.id}"></a>
