--- a/templet/phone/index.html
+++ b/templet/phone/index.html
@@ -54,7 +54,7 @@
                                         <figure><img src="{$vo.cover|upload_echo}" alt="" class="img"><em></em>
                                         </figure>
                                         <div class="caption">
-                                            <div class="txt2">{$vo.content|msubstr:'0':'50'}</div>
+                                            <div class="txt2">{$vo.brief|msubstr:'0':'50'}</div>
                                             <div class="txt3">more</div>
                                         </div>
                                     </a>
